# gersemi

./: .flake8  .gersemirc.example  .gitignore  .pre-commit-hooks.yaml  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  main.py  mypy.ini  pyproject.toml  requirements.testing.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: deploy-testpypi.yml  deploy.yml  gersemi-el.yml  publish-executables.yml  test.yml
editors/emacs/: gersemi-tests.el  gersemi.el
extension-example/as_file/: acme_corporation.py
extension-example/as_module/: pyproject.toml
extension-example/code_to_format/: favour-expansion.cmake  favour-inlining.cmake
extension-example/gersemi_extension_example/: __init__.py
formatter/: ast_helpers.py  cmake.lark  converter.py  dumper.py  formatter.py  parser.py  postprocessor.py
gersemi/: __main__.py  __version__.py  argument_schema.py  ast_helpers.py  base_command_invocation_dumper.py  base_dumper.py  builtin_commands  builtin_commands.py  cache.py  cmake.lark  command_invocation_dumper.py  command_line_formatter.py  configuration.py  configuration.schema.json  configuration_reports.py  custom_command_definition_finder.py  custom_command_dumper_generator.py  diff.py  dumper.py  enum_with_metadata.py  exceptions.py  extension_type.py  extensions.py  formatted_file.py  formatter.py  handwritten_parser.py  immutable.py  indenter.py  interpreter.py  keyword_kind.py  keyword_preprocessor.py  keyword_with_pairs_formatter.py  keywords.py  mode.py  noop.py  official_commands.py  parser.py  parser_picklers.py  parsing_transformer.py  postprocessor.py  (+14 more)
gersemi/command_invocation_dumpers/: __init__.py  argument_aware_command_invocation_dumper.py  cmake_host_system_information_command.py  command_with_property_value_pairs_dumper.py  condition_syntax_command_invocation_dumper.py  configure_file_command.py  ctest_command_dumpers.py  endmacro_command.py  execute_process_command.py  get_directory_property_command.py  get_filename_component_command.py  get_property_command.py  include_command.py  install_command_dumper.py  keyword_aware_command_invocation_dumper.py  macro_command.py  mark_as_advanced_command.py  math_command.py  message_command.py  module_command_dumpers.py  multiple_signature_command_invocation_dumper.py  preserving_command_invocation_dumper.py  project_command_dumpers.py  scripting_command_dumpers.py  section_aware_command_invocation_dumper.py  separate_arguments_command.py  set_command.py  set_directory_properties_command.py  set_property_command.py  specialized_dumpers.py  standard_command_dumper.py  target_link_libraries_command_dumper.py  two_word_keyword_isolator.py
gersemi/experimental/: dumper.py  line_comment_reflower.py
gersemi/rust-backend/: Cargo.toml  app.rs  args.rs  argument_schema.rs  backend.rs  build.rs  cache.rs  configuration.rs  custom_command_definition_finder.rs  diff.rs  dumper.rs  formatter.rs  keyword_preprocessor.rs  mode.rs  node.rs  parser.rs  python_side.rs  runner.rs  sanity_checker.rs  two_words_keyword_isolator.rs  utils.rs  warning_sink.rs
gersemi/rust-parser/: Cargo.toml  parser.rs
gersemi/specializations/: add_custom_target.py  argument_aware_command_invocation_dumper.py  condition_syntax_command_invocation_dumper.py  multiple_signature_command_invocation_dumper.py  preserving_command_invocation_dumper.py  section_aware_command_invocation_dumper.py  set_property.py  specialized_dumpers.py  standard_command_dumper.py  two_word_keyword_isolator.py
gersemi/tasks/: check_and_show_diff.py  check_formatting.py  do_nothing.py  format_file.py  forward_to_stdout.py  rewrite_in_place.py  show_diff.py
stubs/lark/: __init__.pyi  grammar.pyi  tree.pyi  utils.pyi  visitors.pyi
tests/: .gersemirc.example  cache_inspector.py  configuration.schema.json  conftest.py  helpers.py  simple_cmake.lark  test_abstract_syntax_tree_equivalence.py  test_configuration.py  test_converter.py  test_custom_command_dumper_generation.py  test_custom_command_formatter_generation.py  test_custom_command_formatting.py  test_executable.py  test_executable_extension_example.py  test_executable_extensions.py  test_executable_ignore_files.py  test_executable_invalid_args.py  test_executable_line_ranges.py  test_executable_overrides.py  test_executable_print_config.py  test_extension_verification.py  test_formatter.py  test_formatter_idempotence.py  test_formatter_with_experimental_features.py  test_handwritten_parser.py  test_immutable.py  test_line_ranges.py  test_parser.py  test_preserve_custom_command_formatting.py  test_profiling.py  tests_generator.py  utils.py
tests/converter/: bracket_arguments.cmake  bracket_arguments.out  cmake_2_doc_example.cmake  cmake_2_doc_example.out  cmake_3_doc_example.cmake  cmake_3_doc_example.in  command_invocations.cmake  command_invocations.in  comments.cmake  comments.out  empty_file.cmake  empty_line_comment.cmake  end_of_file_without_newline.cmake  escaped_quote_in_quoted_argument.cmake  quoted_arguments.cmake  quoted_arguments.in  unquoted_argument_of_command_invocation_starting_new_line.cmake  unquoted_arguments.cmake  unquoted_arguments.out  unquoted_legacy.cmake  unquoted_legacy_make_style_reference.cmake
tests/custom_command_formatting/: bracket_comment_as_first_argument_of_cmake_parse_arguments.cmake  commented_keywords_inlined_in_cmake_parse_arguments.cmake  commented_keywords_inlined_in_cmake_parse_arguments_parse_argv.cmake  comments_in_definition.cmake  keywords_from_variables.cmake  keywords_from_variables_with_comments.cmake  (+7 more)
tests/executable/closest_configuration_file/60_different_config_than_root/: .gersemirc  CMakeLists.txt
tests/executable/custom_project/formatted/: CMakeLists.txt
tests/executable/custom_project/formatted/subdirectory_one/: CMakeLists.txt
tests/executable/custom_project/formatted/subdirectory_two/: CMakeLists.txt
(+557 files in other folders)
