[package]
name = "gersemi-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
pyo3 = { version = "0.29", features = ["abi3"] }
regex = "1.12"

[lib]
name = "gersemi_rust_backend"
crate-type = ["cdylib"]
path = "backend.rs"

[lints.clippy]
struct-field-names = {level = "allow", priority = 1}
pedantic = "warn"
