[package]
name = "gersemi-rust-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.28", features = ["abi3"] }
regex = "1.12"

[lib]
name = "gersemi_rust_parser"
crate-type = ["cdylib"]
path = "parser.rs"

[lints.clippy]
struct-field-names = {level = "allow", priority = 1}
pedantic = "warn"

